# ai-deployment-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: companies.json
docs/: execution-checklist.md  implementation-plan-v1.md  mvp-plan.md  research-rubric.md  v1-design.md
reports/: index.html
reports/daily/: 2026-06-07.md  2026-06-08.md
scripts/: publish_reports.sh  run_daily_tracker.sh
src/: collectors.py  company_registry.py  dedupe.py  models.py  schema.sql  scoring.py  sources.py  storage.py  tracker.py
src/reports/: __init__.py  daily.py  site.py
tests/: test_collectors.py  test_daily_report.py  test_dedupe.py  test_models.py  test_schema.py  test_scoring.py  test_site.py  test_sources.py  test_storage.py
